Updated About Me and CV

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <p class ="description">I am a highly motivated and detail-oriented finance and economics professional with over 6 months of experience
                                 in financial analysis, accounting/ audit & tax roles. I excel in creating innovative and effective solutions in financial modeling, visualization
                                 and forecasting, financial systems development and more...</p>
-                            <a href="./static/assets/cv/Brian_Mwangi_CV.pdf" class="btn" download>Download CV</a>
+                            <a href="./static/assets/cv/Brian_Denis_Mwangi_Mugo_CV_Finance.pdf" class="btn" download>Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="./static/assets/images/hero.jpg" alt="">
@@ -77,9 +77,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Brian Denis Mwangi Mugo a <span>Financial Economist</span></h3>
-                                    <p>I am a highly motivated and detail-oriented financial economist with a strong academic background and practical experience in financial analysis,
-                                         auditing, and economic research. My passion for finance drives my commitment to delivering insightful and strategic financial solutions. I excel in 
-                                         leveraging my programming skills to enhance financial analysis and optimize business processes.</p>
+                                    <p>In the captivating realm of financial economics and applied accounting, I am an impassioned seeker of knowledge and catalyst for change, driven by an insatiable curiosity and unwavering commitment to excellence. With a fusion of theoretical acumen and practical insights, I navigate the complexities of global markets with finesse, leveraging quantitative analysis, strategic planning, and risk management to unveil opportunities and mitigate challenges. Beyond the confines of spreadsheets and numbers, I am propelled by a deeper sense of purpose—to drive meaningful change and foster sustainable growth. Guided by integrity, diligence, and resilience, I uphold the highest standards of professionalism, striving to make a tangible impact that transcends the bottom line. As I chart the course for the future, my aspirations are lofty yet grounded, rooted in a commitment to inspire and empower others to reach their full potential. With an unwavering resolve and a keen eye for innovation, I am poised to embark on the next chapter of my journey, ready to leave an indelible mark on the world of finance and economics.</p>
                                 </div>
                             </div>
                             <div class="row">
